--- a/app/assets/stylesheets/devise.css
+++ b/app/assets/stylesheets/devise.css
@@ -1,10 +1,10 @@
 /* connexion */
 .loginbox {
     position: relative;
-    transform: translate(0%, -40%);
     background-color: rgba(0, 0, 0, .6);
-    width: 39%;
-    padding: 4%;
+    width: 40%;
+    /* height: 35%; */
+    padding: 1% 2%;
     box-sizing: border-box;
     box-shadow: 0px 15px 25px rgba(0, 0, 0, .4);
     border-radius: 10px;
