--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,11 +4,11 @@
     <div class="row">
         <div class="col-md-6">
             <%= f.label :username, "Pseudo" %><br />
-            <%= f.text_field :username, autofocus: true, autocomplete: "username" %>
+            <%= f.text_field :username, autofocus: true, autocomplete: "username", class: "form-control" %>
         </div>
         <div class="col-md-6">
             <%= f.label :email, "Email" %><br />
-            <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
         </div>
     </div>
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -19,7 +19,7 @@
     <div class="row">
         <div class="col-md-6">
             <%= f.label :password do %>Mot de passe <i> (laissez vide si vous ne voulez pas le changer)</i><% end %><br>
-            <%= f.password_field :password, autocomplete: "new-password" %>
+            <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
             <% if @minimum_password_length %>
             <em>
                 <%= @minimum_password_length %> characters minimum</em>
@@ -27,13 +27,13 @@
         </div>
         <div class="col-md-6">
             <%= f.label :password_confirmation, "Confirmer votre mot de passe" %><br />
-            <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
         </div>
     </div>
     <div class="">
         <%= f.label :current_password, "Mot de passe actuel" %>
         <i>(nous avons besoin de votre mot de passe actuel pour confirmer vos modifications)</i><br />
-        <%= f.password_field :current_password, autocomplete: "current-password" %>
+        <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control" %>
     </div><br>
     <div class="actions">
         <%= f.submit "Mettre à jour", class: "btn btn-success" %>
