--- a/app/views/user/_form.html.erb
+++ b/app/views/user/_form.html.erb
@@ -1,7 +1,7 @@
 <% if user_signed_in? %>
 <div class="user_form">
     <div class="row">
-        <div class="right col-md-10">
+        <div class="right col-10">
             <div class="description jumbotron">
                 <h1 style="text-align: center;">
                     <% if action_name == 'show' %>
@@ -37,7 +37,7 @@
                 </h1>
             </div>
         </div>
-        <div class="left col-md-2">
+        <div class="left col-2">
             <div class="logo">
                 <%= image_tag (current_user.avatar.attached? ? current_user.avatar : 'profile-2398782_960_720.png'), width: '100%', height: '100%' %>
             </div>
@@ -107,9 +107,9 @@
                             <i class="fas fa-user-cog"> Paramètre de compte</i>
                         <% end %>
                     </li>
-                    <li class="disabled" type="disabled">
-                        <%= link_to user_games_path(current_user) do %>
-                            <i class="fas fa-chess"> Game Space</i>
+                    <li class="" type="">
+                        <%= link_to user_games_path(current_user), class: "disabled" do %>
+                            <i class="fas fa-chess"> Espace Jeux</i>
                         <% end %>
                     </li>
                 </ul>
