--- a/app/views/user/_form.html.erb
+++ b/app/views/user/_form.html.erb
@@ -108,7 +108,7 @@
                         <% end %>
                     </li>
                     <li class="" type="">
-                        <%= link_to user_games_path(current_user), class: "disabled" do %>
+                        <%= link_to user_games_path(current_user), class: "" do %>
                             <i class="fas fa-chess"> Espace Jeux</i>
                         <% end %>
                     </li>
