--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,4 +1,4 @@
-==================Hello <%= @user.username %> and welcome on board !==================
+==================Hello <%= @user.username %> and welcome aboard !==================
 
     Thank you to register on our site
     You have register on our site, by using this e-mail address : <%= @user.email %>.
