--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Hello <%= @user.username %> and welcome on board !</h1>
+    <h1>Hello <%= @user.username %> and welcome aboard !</h1>
     <p>
       <strong>Thank you to register on our site</strong><br>
       You have register on our site, by using this e-mail address : <%= @user.email %>.
